--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-	<header id="footer">
+	<header id="header">
 		<div class="wrapper">
 			<a href="" class="logo-simples"><img src="assets/images/logo.png" alt=""></a>
 			<a href="" class="logo-combinado">
@@ -34,9 +34,11 @@
 		</div>
 	</section>
 	<section id="apresentacao">
-		<div class="wrapper">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed felis iaculis, tristique eros eu, gravida libero. Sed rutrum nisl eu odio imperdiet, vitae mollis neque vehicula. Suspendisse facilisis neque sed semper rutrum. Nullam cursus augue eu sapien mattis, sed sodales tellus dictum. Aenean aliquam pharetra sollicitudin. Morbi tincidunt commodo urna, vel sollicitudin purus cursus eu. Nulla facilisi. Phasellus ac diam enim.</p>
-			<hr>
+		<div class="wrapper-full">
+			<div class="texto">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed felis iaculis, tristique eros eu, gravida libero. Sed rutrum nisl eu odio imperdiet, vitae mollis neque vehicula. Suspendisse facilisis neque sed semper rutrum. Nullam cursus augue eu sapien mattis, sed sodales tellus dictum. Aenean aliquam pharetra sollicitudin. Morbi tincidunt commodo urna, vel sollicitudin purus cursus eu. Nulla facilisi. Phasellus ac diam enim.</p>
+				<hr>
+			</div>
 		</div>
 	</section>
 	<section id="doces">
