--- a/index.html
+++ b/index.html
@@ -56,31 +56,35 @@
 		</ul>
 	</section>
 	<section id="cupcake">
-		<div class="wrapper">
+		<div class="wrapper-full">
 			<div class="content">
-				<div class="bloco-feature">
-					<p class="tit">Lorem Ipsun Dolor</p>
-					<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+				<div class="conteudo esquerda">
+					<div class="bloco-feature">
+						<h2>Lorem Ipsun Dolor</h2>
+						<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+					</div>
+					<div class="bloco-feature">
+						<h2>Lorem Ipsun Dolor</h2>
+						<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+					</div>
+					<div class="bloco-feature">
+						<h2>Lorem Ipsun Dolor</h2>
+						<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+					</div>
 				</div>
-				<div class="bloco-feature">
-					<p class="tit">Lorem Ipsun Dolor</p>
-					<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-				</div>
-				<div class="bloco-feature">
-					<p class="tit">Lorem Ipsun Dolor</p>
-					<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-				</div>
-				<div class="bloco-feature">
-					<p class="tit">Lorem Ipsun Dolor</p>
-					<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-				</div>
-				<div class="bloco-feature">
-					<p class="tit">Lorem Ipsun Dolor</p>
-					<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-				</div>
-				<div class="bloco-feature">
-					<p class="tit">Lorem Ipsun Dolor</p>
-					<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+				<div class="conteudo direita">
+					<div class="bloco-feature">
+						<h2>Lorem Ipsun Dolor</h2>
+						<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+					</div>
+					<div class="bloco-feature">
+						<h2>Lorem Ipsun Dolor</h2>
+						<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+					</div>
+					<div class="bloco-feature">
+						<h2>Lorem Ipsun Dolor</h2>
+						<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+					</div>
 				</div>
 				<img src="assets/images/cupcake.png" alt="" class="cupcake">
 			</div>
