--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<header id="header">
 		<div class="wrapper">
-			<a href="" class="logo-simples"><img src="assets/images/logo.png" alt=""></a>
+			<a href=""><img src="assets/images/logo.png" alt="" class="logo-simples"></a>
 			<a href="" class="logo-combinado">
 				<span></span>
 				<span></span>
