Estilo para formulário de reservas

--- a/index.html
+++ b/index.html
@@ -30,7 +30,41 @@
 	<section id="booking">
 		<h1>Macarronis</h1>
 		<div id="reserva-container">
-			
+			<div class="wrapper">
+				<form action="" id="reserva">
+					<div class="campo-reserva calendario">
+						<label for="cChegada">Chegada</label>
+						<input type="date" name="" id="cChegada" value="1">
+						<span class="valor">1</span>
+						<span class="abre-calendario"></span>
+					</div>
+					<div class="campo-reserva calendario">
+						<label for="cSaida">Saída</label>
+						<input type="date" name="" id="cSaida" value="1">
+						<span class="valor">1</span>
+						<span class="abre-calendario"></span>
+					</div>
+					<div class="campo-reserva quantidade">
+						<label for="cAdultos">Adultos</label>
+						<input type="number" name="" id="cAdultos" value="1">
+						<span class="valor">1</span>
+						<span class="mais"></span>
+						<span class="menos"></span>
+					</div>
+					<div class="campo-reserva quantidade">
+						<label for="cCriancas">Crianças</label>
+						<input type="number" name="" id="cCriancas" value="1">
+						<span class="valor">1</span>
+						<span class="mais"></span>
+						<span class="menos"></span>
+					</div>
+					<div class="campo-reserva promocode">
+						<label for="cPromocode">Promocode</label>
+						<input type="text" name="promocode" id="cPromocode">
+					</div>
+					<button type="submit">Reservar</button>
+				</form>
+			</div>
 		</div>
 	</section>
 	<section id="apresentacao">
