Finalizado estilo do booking

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<div class="wrapper">
 			<a href=""><img src="assets/images/logo.png" alt="" class="logo-simples"></a>
 			<a href="" class="logo-combinado">
-				<span></span>
-				<span></span>
+				<span class="texto"></span>
+				<span class="maca"></span>
 			</a>
 			<nav>
 				<ul class="global">
