Script principal e animações da página

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<header id="header">
+		<div class="fundo"></div>
 		<div class="wrapper">
 			<a href=""><img src="assets/images/logo.png" alt="" class="logo-simples"></a>
 			<a href="" class="logo-combinado">
