Script e estilo para aviso de campos obrigatórios

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<label for="cPromocode">Promocode</label>
 						<input type="text" name="promocode" id="cPromocode">
 					</div>
-					<button type="submit">Reservar</button>
+					<button type="submit" class="botao-reservar">Reservar</button>
 				</form>
 			</div>
 		</div>
