Calendário. Estilo e scripts.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<form action="" id="reserva">
 					<div class="campo-reserva calendario">
 						<label for="cChegada">Chegada</label>
-						<input type="date" name="" id="cChegada" value="1">
+						<input type="data" name="" id="cChegada" value="1">
 						<span class="valor">01</span>
 						<span class="abre-calendario"></span>
 					</div>
