Menu hamburger responsivo.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 				<span class="maca"></span>
 			</a>
 			<nav>
+				<span class="botao-menu"></span>
+				<img src="assets/images/logo.png" alt="" class="logo-nav">
 				<ul class="global">
 					<li><a href="">Quem Somos</a></li>
 					<li><a href="">Receitas</a></li>
